# cargo-pgo

./: .dockerignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: check.yml  publish-image.yml  publish.yml  release.yml
ci/: pgo.yml
src/: build.rs  check.rs  clean.rs  cli.rs  lib.rs  main.rs  workspace.rs
src/bolt/: cli.rs  env.rs  instrument.rs  mod.rs  optimize.rs
src/env/: mod.rs  pgo.rs
src/pgo/: build.rs  check.rs  env.rs  instrument.rs  mod.rs  optimize.rs
src/utils/: file.rs  mod.rs  str.rs
tests/: bolt.rs  pgo.rs
tests/integration/: bolt.rs  clean.rs  main.rs  pgo.rs
tests/integration/utils/: mod.rs
tests/utils/: mod.rs
