[package]
name = "cargo-pgo"
version = "0.2.5"
edition = "2021"
rust-version = "1.56.1"

description = "Cargo subcommand for optimizing Rust binaries with PGO and BOLT."
repository = "https://github.com/kobzol/cargo-pgo"
authors = ["Jakub Beránek <berykubik@gmail.com>"]
keywords = [
    "pgo",
    "bolt",
    "optimization",
    "profile-guided-opt",
    "cargo",
]
categories = ["development-tools::cargo-plugins"]

readme = "README.md"
license = "MIT"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies]
anyhow = "1"
which = "4.2"
clap = { version = "3.2", features = ["derive"] }
log = "0.4"
env_logger = "0.9.0"
colored = "2.0.0"
cargo_metadata = "0.15.0"
humansize = "1.1.1"
semver = "1.0.12"
tempfile = "3.3.0"
regex = "1.6.0"
once_cell = "1.13.0"
rustc-demangle = "0.1"
walkdir = "2.3.2"
shellwords = "1.1.0"
blake3 = "1.3.1"
