[package]
name = "cargo-pgo"
version = "0.2.8"
edition = "2021"
rust-version = "1.56.1"

description = "Cargo subcommand for optimizing Rust binaries with PGO and BOLT."
repository = "https://github.com/kobzol/cargo-pgo"
authors = ["Jakub Beránek <berykubik@gmail.com>"]
keywords = [
    "pgo",
    "bolt",
    "optimization",
    "profile-guided-opt",
    "cargo",
]
categories = ["development-tools::cargo-plugins"]

readme = "README.md"
license = "MIT"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies]
anyhow = "1"
which = "7"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
colored = "2"
cargo_metadata = "0.19"
humansize = "1"
semver = "1"
tempfile = "3.14"
regex = "1.11"
once_cell = "1.20"
rustc-demangle = "0.1"
walkdir = "2.5"
shellwords = "1.1"
blake3 = "1.4"
version_check = "0.9"

[dev-dependencies]
version_check = "0.9"
