[package]
name = "cargo-pgo"
version = "0.2.9"
edition = "2024"
rust-version = "1.85.0"

description = "Cargo subcommand for optimizing Rust binaries with PGO and BOLT."
repository = "https://github.com/kobzol/cargo-pgo"
authors = ["Jakub Beránek <berykubik@gmail.com>"]
keywords = [
    "pgo",
    "bolt",
    "optimization",
    "profile-guided-opt",
    "cargo",
]
categories = ["development-tools::cargo-plugins"]

readme = "README.md"
license = "MIT"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies]
anyhow = "1"
which = "7"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
colored = "3"
cargo_metadata = "0.19"
humansize = "2"
semver = "1"
tempfile = "3.14"
regex = "1.11"
rustc-demangle = "0.1"
walkdir = "2.5"
shellwords = "1.1"
blake3 = "1.4"
rustc_version = "0.4.1"
